# smart-data-pipeline

./: .gitignore  .roomodes  Dockerfile  LOOKING-AHEAD.md  Makefile  README.md  VISION.md  docker-compose.yml  pyproject.toml  pytest.ini  requirements.txt  run_server.py  user_stories.md
.agent/workflows/: testing.md
archive/: REORGANIZATION_SUMMARY.md  VERSION_MANAGEMENT.md  VISION.md  user_stories.md
archive/work-logs/: status_report_phase2_agents.md
config/: mcp.json
docs/: API.md  ARCHITECTURE.md  CONTRIBUTING.md  DEPLOYMENT.md  USAGE.md  parser_architecture.md  runtime_architecture.md  silver_architecture.md  storage_architecture.md  tier2_doctor_spec.md
docs/internal/: README.md
docs/work-logs/: status_report.md  status_report_3.md
scripts/: README.md  bump_version.py  register_firecrawl.py
src/: __init__.py  __main__.py  __version__.py  main.py
src/agents/: __init__.py  base.py  builder.py  doctor.py  models.py  scout.py
src/api/: app.py  models.py  routes.py
src/core/: config.py  llm.py  mcp.py  plugins.py
src/ingestion/: fetcher.py
src/orchestration/: __init__.py  doctor.py  health.py  orchestrator.py  task_queue.py
src/processing/: base.py  bronze_reader.py
src/registry/: en_wikipedia_org.py  nba_plugin.py  nba_schedule.py  (+1 more)
tests/: demo_add_source.py  demo_doctor.py  manual_test_scout.py  test_api.py  test_demo_add_source.py  test_demo_doctor.py  test_e2e_healing.py  test_end_to_end_agents.py  test_labels.py  test_learner.py  test_loader.py  test_mcp_manager.py  test_parser_flow.py  test_resilience.py  test_scout.py  test_silver.py
(+8 files in other folders)
